# filminfo

./: Cargo.toml  README.md  config.json.example
src/: input.rs  lib.rs  main.rs  search.rs  select.rs
