[package]
name = "filminfo"
version = "0.1.0"
authors = ["Phil Barber <phil.barber93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
kuchiki = "*"
dialoguer = "*"
